--- a/src/json/config.json
+++ b/src/json/config.json
@@ -3,12 +3,18 @@
 		// seed(s) to initialize PRNGs
 		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
 		// duration of each simulation in seconds
-		"duration" : 30,
+		"duration" : 60,
 		// Graph file to simulate
 		"graph": "graphs/first_graph.graphml",
 		// log file name using configuration parameters
 		"output" : "output_{seed}.csv",
 		// Verbose value
-		"verbose": "True"
+		"verbose": "True",
+		// Transmission datarate in 1/seconds
+		"datarate": {"distribution": "exp", "lambda" : 300},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": {"distribution": "unif", "min": 0.001, "max": 0.1, "int": 0.001}
 	}
 }
