Link added, delay on the link property, delay on the graphml, bug correction for event delay, now message transmission is handeld by the link object, introduction of the resource for the link and usage of simpy store object to simplify the code and event reception/handling

--- a/src/json/config.json
+++ b/src/json/config.json
@@ -5,13 +5,13 @@
 		// duration of each simulation in seconds
 		"duration" : 60,
 		// Graph file to simulate
-		"graph": "graphs/first_graph.graphml",
+		"graph": "graphs/propagation_graph.graphml",
 		// log file name using configuration parameters
 		"output" : "output_{seed}.csv",
 		// Verbose value
 		"verbose": "True",
 		// Transmission datarate in 1/seconds
-		"datarate": {"distribution": "exp", "lambda" : 300},
+		"datarate": {"distribution": "exp", "lambda" : 100},
 		// Processing time distribution
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
