--- a/src/json/config.json
+++ b/src/json/config.json
@@ -3,21 +3,21 @@
 		// seed(s) to initialize PRNGs
 		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
 		// duration of each simulation in seconds
-		"duration" : 60,
+		"duration" : 600,
 		// Graph file to simulate
 		"graph": "graphs/fig_4_fsm_model.graphml",
 		// log file name using configuration parameters
 		"output" : "output_{seed}.csv",
 		// Verbose value
-		"verbose": "False",
+		"verbose": "True",
 		// Withdraw signaling 
 		"withdraw": "True",
 		// Reannouncement of a destination after a withdraw
 		"reannouncement": "True",
 		// Withdraw interval distribution from the announcement
-		"withdraw_dist": {"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
+		"withdraw_dist": {"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
 		// announcement interval distribution from the withdraw 
-		"reannouncement_dist": {"distribution": "unif", "min": 1, "max": 5, "int": 0.1},
+		"reannouncement_dist": {"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
 		// Transmission datarate in 1/seconds
 		"datarate": {"distribution": "exp", "lambda" : 100},
 		// Processing time distribution
