--- a/src/json/config.json
+++ b/src/json/config.json
@@ -3,11 +3,11 @@
 		// seed(s) to initialize PRNGs
 		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
 		// duration of each simulation in seconds
-		"duration" : 600,
+		"duration" : 3600,
 		// Graph file to simulate
 		"graph": "graphs/fig_4_fsm_model.graphml",
-		// log file name using configuration parameters
-		"output" : "results/test/experiment_{date-time}/output_{seed}.csv",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/test/experiment_multi_test/output_{seed}.csv",
 		// Verbose value
 		"verbose": "False",
 		// Withdraw signaling 
