--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,8 @@ numpy==1.19.1
 pandas==1.1.1
 pkg-resources==0.0.0
 python-dateutil==2.8.1
+python-utils==2.4.0
 pytz==2020.1
 simpy==4.0.1
 six==1.15.0
+tqdm==4.48.2
