--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,12 +1,29 @@
+attrs==20.1.0
+certifi==2020.6.20
+coverage==5.2.1
+cycler==0.10.0
 decorator==4.4.2
 graphviz==0.14.1
+importlib-metadata==1.7.0
+iniconfig==1.0.1
+kiwisolver==1.2.0
+matplotlib==3.3.1
+more-itertools==8.5.0
 networkx==2.5
 numpy==1.19.1
+packaging==20.4
 pandas==1.1.1
-pkg-resources==0.0.0
+Pillow==7.2.0
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.0.1
+pytest-cov==2.10.1
 python-dateutil==2.8.1
 python-utils==2.4.0
 pytz==2020.1
 simpy==4.0.1
 six==1.15.0
+toml==0.10.1
 tqdm==4.48.2
+zipp==3.1.0
