Loop detection implemented and tested on a ring graph, multiple experiments parallelism implemented, use parallel to run multiple experiments, install updated for parallel, parallel cited in README and documentation

--- a/src/json/config.json
+++ b/src/json/config.json
@@ -28,5 +28,31 @@
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
 		"delay": {"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001}
+	},
+	"loop_test" : {
+		// seed(s) to initialize PRNGs
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
+		// duration of each simulation in seconds
+		"duration" : 3600,
+		// Graph file to simulate
+		"graph": "graphs/loop_test.graphml",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/loop_test/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}.csv",
+		// Verbose value
+		"verbose": "False",
+		// Withdraw signaling 
+		"withdraw": "True",
+		// Reannouncement of a destination after a withdraw
+		"reannouncement": "True",
+		// Withdraw interval distribution from the announcement
+		"withdraw_dist": {"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+		// announcement interval distribution from the withdraw 
+		"reannouncement_dist": {"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+		// Transmission time required to start the actual message transmission 
+		"datarate": {"distribution": "const", "mean" : 0.00001},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": {"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001}
 	}
 }
