experiments with multi destinations

--- a/src/json/config.json
+++ b/src/json/config.json
@@ -5,15 +5,15 @@
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
-		"graph": "graphs/fig_4_fsm_model.graphml",
+		"graph": "graphs/double_destination.graphml",
 		// log file name using configuration parameters, use {seed} or {date-time}
 		"output" : "results/test/experiment_fig_4/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}.csv",
 		// Verbose value
 		"verbose": "False",
 		// Withdraw signaling 
-		"withdraw": "True",
+		"withdraw": "False",
 		// Reannouncement of a destination after a withdraw
-		"reannouncement": "True",
+		"reannouncement": "False",
 		// Withdraw interval distribution from the announcement
 		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 8, "max": 10, "int": 0.1},
