--- a/src/json/config.json
+++ b/src/json/config.json
@@ -5,25 +5,25 @@
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
-		"graph": "graphs/double_destination.graphml",
+		"graph": "graphs/fig_4_fsm_model.graphml",
 		// log file name using configuration parameters, use {seed} or {date-time}
-		"output" : "results/test/experiment_fig_4/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}.csv",
+		"output" : "results/test/experiment_fig_4/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{datarate.lambda}.csv",
 		// Verbose value
-		"verbose": "False",
+		"verbose": "True",
 		// Withdraw signaling 
-		"withdraw": "False",
+		"withdraw": "True",
 		// Reannouncement of a destination after a withdraw
-		"reannouncement": "False",
+		"reannouncement": "True",
 		// Withdraw interval distribution from the announcement
 		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 8, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 2, "max": 3, "int": 0.1}],
 		// announcement interval distribution from the withdraw 
 		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
 							    {"distribution": "unif", "min": 1, "max": 3, "int": 0.1}],
 		// Transmission time required to start the actual message transmission 
-		"datarate": {"distribution": "const", "mean" : 0.00001},
+		"datarate": [{"distribution": "exp", "lambda" : 100},
+					 {"distribution": "exp", "lambda" : 200},
+					 {"distribution": "exp", "lambda" : 500}],
 		// Processing time distribution
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
