--- a/src/json/config.json
+++ b/src/json/config.json
@@ -74,16 +74,34 @@
 		"output" : "results/policy_test/PolicyFunction/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{datarate.lambda}.csv",
 		// Verbose value
 		"verbose": "True",
+		// Signaling flag
+		"signaling": "True",
+		// Signaling sequence, ignored if signaling false
+		"signaling_sequence": "AWAW",
 		// Withdraw signaling 
 		"withdraw": "False",
 		// Reannouncement of a destination after a withdraw
 		"reannouncement": "False",
 		// Withdraw interval distribution from the announcement
-		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 2, "max": 3, "int": 0.1}],
+		"withdraw_dist": [{"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 2, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 3, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 4, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 6, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 7, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 8, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 9, "max": 10, "int": 0.1}],
 		// announcement interval distribution from the withdraw 
-		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-							    {"distribution": "unif", "min": 1, "max": 3, "int": 0.1}],
+		"reannouncement_dist": [{"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 2, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 3, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 4, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 6, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 7, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 8, "max": 10, "int": 0.1},
+							    {"distribution": "unif", "min": 9, "max": 10, "int": 0.1}],
 		// Transmission time required to start the actual message transmission 
 		"datarate": [{"distribution": "exp", "lambda" : 100},
 					 {"distribution": "exp", "lambda" : 200},
