--- a/src/json/config.json
+++ b/src/json/config.json
@@ -1,7 +1,7 @@
 {
 	"simulation" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
 		// duration of each simulation in seconds
 		"duration" : 300,
 		// Graph file to simulate
@@ -13,7 +13,7 @@
 		// Signaling flag
 		"signaling": "True",
 		// Signaling sequence, ignored if signaling false
-		"signaling_sequence": "AWWWA",
+		"signaling_sequence": "AWA",
 		// Withdraw signaling 
 		"withdraw": "True",
 		// Reannouncement of a destination after a withdraw
@@ -35,7 +35,7 @@
 	},
 	"policy_value_test" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
@@ -65,7 +65,7 @@
 	},
 	"policy_function_test" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
@@ -86,9 +86,7 @@
 		"withdraw_dist": [{"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 2, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 3, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 4, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 6, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 7, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 8, "max": 10, "int": 0.1},
 						  {"distribution": "unif", "min": 9, "max": 10, "int": 0.1}],
@@ -96,9 +94,7 @@
 		"reannouncement_dist": [{"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
 								{"distribution": "unif", "min": 2, "max": 10, "int": 0.1},
 								{"distribution": "unif", "min": 3, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 4, "max": 10, "int": 0.1},
 								{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 6, "max": 10, "int": 0.1},
 								{"distribution": "unif", "min": 7, "max": 10, "int": 0.1},
 								{"distribution": "unif", "min": 8, "max": 10, "int": 0.1},
 							    {"distribution": "unif", "min": 9, "max": 10, "int": 0.1}],
@@ -110,6 +106,44 @@
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
 		"delay": {"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001}
+	},
+	"fabrikant" : {
+		// seed(s) to initialize PRNGs
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
+		// duration of each simulation in seconds
+		"duration" : 3600,
+		// Graph file to simulate
+		"graph": "graphs/fabrikant.graphml",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/fabrikant/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{delay.max}.csv",
+		// Verbose value
+		"verbose": "True",
+		// Signaling flag
+		"signaling": "True",
+		// Signaling sequence, ignored if signaling false
+		"signaling_sequence": "AWA",
+		// Implicit withdraw of routes
+		"implicit_withdraw": "True",
+		// Withdraw signaling 
+		"withdraw": "False",
+		// Reannouncement of a destination after a withdraw
+		"reannouncement": "False",
+		// Withdraw interval distribution from the announcement
+		"withdraw_dist": [{"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 3, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 7, "max": 10, "int": 0.1}],
+		// announcement interval distribution from the withdraw 
+		"reannouncement_dist": [{"distribution": "unif", "min": 1, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 3, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 7, "max": 10, "int": 0.1}],
+		// Transmission time required to start the actual message transmission 
+		"datarate": {"distribution": "exp", "lambda" : 100},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": [{"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001},
+				  {"distribution": "unif", "min": 1, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 6, "int": 0.001}]
 	},
 	"loop_test" : {
 		// seed(s) to initialize PRNGs
