--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,37 +1,40 @@
 alabaster==0.7.12
-attrs==20.1.0
+attrs==20.2.0
 Babel==2.8.0
 certifi==2020.6.20
 chardet==3.0.4
-coverage==5.2.1
+coverage==5.3
 cycler==0.10.0
 decorator==4.4.2
 docutils==0.16
-graphviz==0.14.1
+graphviz==0.14.2
 idna==2.10
 imagesize==1.2.0
-importlib-metadata==1.7.0
+importlib-metadata==2.0.0
 iniconfig==1.0.1
 Jinja2==2.11.2
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
-matplotlib==3.3.1
+matplotlib==3.3.2
 more-itertools==8.5.0
 networkx==2.5
-numpy==1.19.1
+numpy==1.19.2
 packaging==20.4
-pandas==1.1.1
+pandas==1.1.3
 Pillow==7.2.0
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.9.0
-Pygments==2.6.1
+Pygments==2.7.1
+pygraphviz==1.6
 pyparsing==2.4.7
-pytest==6.0.1
+pytest==6.1.1
 pytest-cov==2.10.1
 python-dateutil==2.8.1
 python-utils==2.4.0
 pytz==2020.1
 requests==2.24.0
+scipy==1.5.3
 simpy==4.0.1
 six==1.15.0
 snowballstemmer==2.0.0
@@ -43,6 +46,6 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.1
-tqdm==4.48.2
+tqdm==4.50.2
 urllib3==1.25.10
-zipp==3.1.0
+zipp==3.3.0
