--- a/src/json/config-fabrikant.json
+++ b/src/json/config-fabrikant.json
@@ -1,7 +1,9 @@
 {
 	"fabrikant-nomrai" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
@@ -13,33 +15,32 @@
 		// Signaling flag
 		"signaling": "True",
 		// Signaling sequence, ignored if signaling false
-		"signaling_sequence": "AWA",
+		"signaling_sequence": "AWAW",
 		// Implicit withdraw of routes
-		"implicit_withdraw": "True",
+		"implicit_withdraw": "False",
 		// Withdraw signaling 
 		"withdraw": "True",
 		// Reannouncement of a destination after a withdraw
 		"reannouncement": "True",
 		// Withdraw interval distribution from the announcement
 		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-						  {"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// announcement interval distribution from the withdraw 
 		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-								{"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// Transmission time required to start the actual message transmission 
 		"datarate": {"distribution": "exp", "lambda" : 100},
 		// Processing time distribution
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
-		"delay": [{"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001},
-				  {"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
-				  {"distribution": "unif", "min": 2, "max": 6, "int": 0.001}]
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
 	},
 	"fabrikant-30fixed" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
@@ -51,33 +52,32 @@
 		// Signaling flag
 		"signaling": "True",
 		// Signaling sequence, ignored if signaling false
-		"signaling_sequence": "AWA",
+		"signaling_sequence": "AWAW",
 		// Implicit withdraw of routes
-		"implicit_withdraw": "True",
+		"implicit_withdraw": "False",
 		// Withdraw signaling 
 		"withdraw": "True",
 		// Reannouncement of a destination after a withdraw
 		"reannouncement": "True",
 		// Withdraw interval distribution from the announcement
 		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-						  {"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// announcement interval distribution from the withdraw 
 		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-								{"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// Transmission time required to start the actual message transmission 
 		"datarate": {"distribution": "exp", "lambda" : 100},
 		// Processing time distribution
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
-		"delay": [{"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001},
-				  {"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
-				  {"distribution": "unif", "min": 2, "max": 6, "int": 0.001}]
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
 	},
 	"fabrikant-ascendent" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
@@ -89,33 +89,32 @@
 		// Signaling flag
 		"signaling": "True",
 		// Signaling sequence, ignored if signaling false
-		"signaling_sequence": "AWA",
+		"signaling_sequence": "AWAW",
 		// Implicit withdraw of routes
-		"implicit_withdraw": "True",
+		"implicit_withdraw": "False",
 		// Withdraw signaling 
 		"withdraw": "True",
 		// Reannouncement of a destination after a withdraw
 		"reannouncement": "True",
 		// Withdraw interval distribution from the announcement
 		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-						  {"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// announcement interval distribution from the withdraw 
 		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-								{"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// Transmission time required to start the actual message transmission 
 		"datarate": {"distribution": "exp", "lambda" : 100},
 		// Processing time distribution
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
-		"delay": [{"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001},
-				  {"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
-				  {"distribution": "unif", "min": 2, "max": 6, "int": 0.001}]
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
 	},
 	"fabrikant-descendent" : {
 		// seed(s) to initialize PRNGs
-		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
 		// duration of each simulation in seconds
 		"duration" : 3600,
 		// Graph file to simulate
@@ -127,7 +126,44 @@
 		// Signaling flag
 		"signaling": "True",
 		// Signaling sequence, ignored if signaling false
-		"signaling_sequence": "AWA",
+		"signaling_sequence": "AWAW",
+		// Implicit withdraw of routes
+		"implicit_withdraw": "False",
+		// Withdraw signaling 
+		"withdraw": "True",
+		// Reannouncement of a destination after a withdraw
+		"reannouncement": "True",
+		// Withdraw interval distribution from the announcement
+		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// announcement interval distribution from the withdraw 
+		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// Transmission time required to start the actual message transmission 
+		"datarate": {"distribution": "exp", "lambda" : 100},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
+	},
+	"fabrikant-nomrai-IW" : {
+		// seed(s) to initialize PRNGs
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
+		// duration of each simulation in seconds
+		"duration" : 3600,
+		// Graph file to simulate
+		"graph": "graphs/fabrikant-mrai/fabrikant-nomrai.graphml",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/fabrikant/fabrikant-nomrai-IW/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{delay.max}.csv",
+		// Verbose value
+		"verbose": "True",
+		// Signaling flag
+		"signaling": "True",
+		// Signaling sequence, ignored if signaling false
+		"signaling_sequence": "AWAW",
 		// Implicit withdraw of routes
 		"implicit_withdraw": "True",
 		// Withdraw signaling 
@@ -136,19 +172,127 @@
 		"reannouncement": "True",
 		// Withdraw interval distribution from the announcement
 		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-						  {"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// announcement interval distribution from the withdraw 
 		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
-								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1},
-								{"distribution": "unif", "min": 30, "max": 45, "int": 0.1}],
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
 		// Transmission time required to start the actual message transmission 
 		"datarate": {"distribution": "exp", "lambda" : 100},
 		// Processing time distribution
 		"processing": {"distribution": "const", "mean": 0.00001},
 		// Network delay distribution
-		"delay": [{"distribution": "unif", "min": 0.001, "max": 1, "int": 0.001},
-				  {"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
-				  {"distribution": "unif", "min": 2, "max": 6, "int": 0.001}]
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
+	},
+	"fabrikant-30fixed-IW" : {
+		// seed(s) to initialize PRNGs
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
+		// duration of each simulation in seconds
+		"duration" : 3600,
+		// Graph file to simulate
+		"graph": "graphs/fabrikant-mrai/fabrikant-30fixed.graphml",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/fabrikant/fabrikant-30fixed-IW/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{delay.max}.csv",
+		// Verbose value
+		"verbose": "True",
+		// Signaling flag
+		"signaling": "True",
+		// Signaling sequence, ignored if signaling false
+		"signaling_sequence": "AWAW",
+		// Implicit withdraw of routes
+		"implicit_withdraw": "True",
+		// Withdraw signaling 
+		"withdraw": "True",
+		// Reannouncement of a destination after a withdraw
+		"reannouncement": "True",
+		// Withdraw interval distribution from the announcement
+		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// announcement interval distribution from the withdraw 
+		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// Transmission time required to start the actual message transmission 
+		"datarate": {"distribution": "exp", "lambda" : 100},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
+	},
+	"fabrikant-ascendent-IW" : {
+		// seed(s) to initialize PRNGs
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
+		// duration of each simulation in seconds
+		"duration" : 3600,
+		// Graph file to simulate
+		"graph": "graphs/fabrikant-mrai/fabrikant-ascendent.graphml",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/fabrikant/fabrikant-ascendent-IW/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{delay.max}.csv",
+		// Verbose value
+		"verbose": "True",
+		// Signaling flag
+		"signaling": "True",
+		// Signaling sequence, ignored if signaling false
+		"signaling_sequence": "AWAW",
+		// Implicit withdraw of routes
+		"implicit_withdraw": "True",
+		// Withdraw signaling 
+		"withdraw": "True",
+		// Reannouncement of a destination after a withdraw
+		"reannouncement": "True",
+		// Withdraw interval distribution from the announcement
+		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// announcement interval distribution from the withdraw 
+		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// Transmission time required to start the actual message transmission 
+		"datarate": {"distribution": "exp", "lambda" : 100},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
+	},
+	"fabrikant-descendent-IW" : {
+		// seed(s) to initialize PRNGs
+		"seed" : [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 
+				  10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 
+				  20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
+		// duration of each simulation in seconds
+		"duration" : 3600,
+		// Graph file to simulate
+		"graph": "graphs/fabrikant-mrai/fabrikant-discendent.graphml",
+		// log file name using configuration parameters, use {seed} or {date-time}
+		"output" : "results/fabrikant/fabrikant-descendent-IW/output_{seed}_{withdraw_dist.min}_{reannouncement_dist.min}_{delay.max}.csv",
+		// Verbose value
+		"verbose": "True",
+		// Signaling flag
+		"signaling": "True",
+		// Signaling sequence, ignored if signaling false
+		"signaling_sequence": "AWAW",
+		// Implicit withdraw of routes
+		"implicit_withdraw": "True",
+		// Withdraw signaling 
+		"withdraw": "True",
+		// Reannouncement of a destination after a withdraw
+		"reannouncement": "True",
+		// Withdraw interval distribution from the announcement
+		"withdraw_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+						  {"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// announcement interval distribution from the withdraw 
+		"reannouncement_dist": [{"distribution": "unif", "min": 5, "max": 10, "int": 0.1},
+								{"distribution": "unif", "min": 10, "max": 15, "int": 0.1}],
+		// Transmission time required to start the actual message transmission 
+		"datarate": {"distribution": "exp", "lambda" : 100},
+		// Processing time distribution
+		"processing": {"distribution": "const", "mean": 0.00001},
+		// Network delay distribution
+		"delay": [{"distribution": "unif", "min": 0.5, "max": 3, "int": 0.001},
+				  {"distribution": "unif", "min": 2, "max": 4, "int": 0.001}]
 	}
 }
